<resources>
    <string name="app_name">katalog_film</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="hmdb">HMDB</string>
    <string name="cast_picture">Cast Picture</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="poster_image">Poster Image</string>
    <string name="cover_image">Cover Image</string>
    <string name="dummy_text" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="genres">Genres</string>
    <string name="cast">Cast</string>
</resources>