<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardCornerRadius="10dp">


    <LinearLayout
        android:layout_width="125dp"
        android:layout_height="250dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_cast"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            app:srcCompat="@color/colorAccent"
            android:contentDescription="@string/cast_picture"/>

        <TextView
            android:id="@+id/cast_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cast_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/role"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
